tests/typing/bad/testfile-while-2.jl
while 42
	println("[Deep Thought] Answer to the Ultimate Question of Life, the Universe, and Everything")
end
